@@ -11,11 +11,13 @@
 ######################################################################
 SUBDIRS = c
 RESOURCES=res/program.data.bin res/file-which-exists res/b
-TARGET   =src/CompiledProgram.class CibylTest.jar CibylTest.jad
+TARGET   =CibylTest.jar CibylTest.jad
 CIBYL_SYSCALL_SETS ?= resource_manager softfloat command_mgr
 
 CIBYL_GENERATE_JAVA_WRAPPERS_OPTS=-DJSR075 -I include -S syscalls
 CIBYL_CLASSPATH=$(WTK_PATH)/lib/jsr75.jar
+# The compilation options, set to e.g., -O to run all optimizations
+CIBYL_MIPS2JAVA_OPTS +=-Iinclude
 
 all: include/ $(SUBDIRS)
 
